# wentu

./: Cargo.toml  LICENSE
assets/styling/: main.css
src/components/: footer.rs
src/core/: mod.rs  player.rs  queue.rs  track.rs
