[package]
name = "wentu"
version = "0.1.0"
authors = ["Jelly <jellylopster@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rodio = { version = "0.20.1", default-features = false, features = ["symphonia-all"] }
rand = { version = "0.9.0-beta.3" }
dioxus = { version = "0.6.0", features = ["router"] }
dioxus-desktop = "0.6.2"
log = "0.4.25"


[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
